// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тестируем CatalogCourses Тестируем рендер  1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <CatalogCourses>
    <Header>
      <div
        className="headerWrapper"
      >
        <header
          className="header"
        >
          <nav
            className="headerNav"
          >
            <IconLogo>
              <a
                className="navLogo"
                href="#"
              >
                <img
                  alt="Purple Frontera logo"
                  src="FILE_MOCK"
                />
              </a>
            </IconLogo>
            <HeaderNav>
              <Link
                as={[Function]}
                to="/home"
              >
                <Link
                  className="link"
                  to="/home"
                >
                  <a
                    className="link"
                    href="/home"
                  >
                    Home
                  </a>
                </Link>
              </Link>
              <Link
                as={[Function]}
                to="/catalog-courses"
              >
                <Link
                  className="link"
                  to="/catalog-courses"
                >
                  <a
                    className="link"
                    href="/catalog-courses"
                  >
                    Suggestion
                  </a>
                </Link>
              </Link>
            </HeaderNav>
          </nav>
          <AccountBar>
            <div
              className="accountBar"
            >
              <SearchInput>
                <div
                  className="searchInput"
                >
                  <form
                    className="searchForm"
                  >
                    <label
                      htmlFor="search"
                    >
                      <input
                        id="search"
                        placeholder="Search..."
                        type="text"
                      />
                    </label>
                    <button
                      type="submit"
                    />
                  </form>
                </div>
              </SearchInput>
              <ProfileButton>
                <div
                  className="wrapper"
                >
                  <div
                    className="dropdown"
                  >
                    <button
                      className="dropdownButton"
                      onClick={[Function]}
                      type="button"
                    />
                  </div>
                </div>
              </ProfileButton>
            </div>
          </AccountBar>
        </header>
      </div>
    </Header>
    <main
      className="container"
    >
      <PageHeader
        label="На основании вашего выбора"
      >
        <h2
          className="pageHeader"
        >
          На основании вашего выбора
        </h2>
      </PageHeader>
      <section>
        <Loader>
          <div
            className="spinner"
          >
            <div
              className="bounce1"
            />
            <div
              className="bounce2"
            />
            <div
              className="bounce3"
            />
          </div>
        </Loader>
      </section>
    </main>
  </CatalogCourses>
</Provider>
`;

exports[`Тестируем CatalogCourses Тестируем рендер  2`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <CatalogCourses>
    <Header>
      <div
        className="headerWrapper"
      >
        <header
          className="header"
        >
          <nav
            className="headerNav"
          >
            <IconLogo>
              <a
                className="navLogo"
                href="#"
              >
                <img
                  alt="Purple Frontera logo"
                  src="FILE_MOCK"
                />
              </a>
            </IconLogo>
            <HeaderNav>
              <Link
                as={[Function]}
                to="/home"
              >
                <Link
                  className="link"
                  to="/home"
                >
                  <a
                    className="link"
                    href="/home"
                  >
                    Home
                  </a>
                </Link>
              </Link>
              <Link
                as={[Function]}
                to="/catalog-courses"
              >
                <Link
                  className="link"
                  to="/catalog-courses"
                >
                  <a
                    className="link"
                    href="/catalog-courses"
                  >
                    Suggestion
                  </a>
                </Link>
              </Link>
            </HeaderNav>
          </nav>
          <AccountBar>
            <div
              className="accountBar"
            >
              <SearchInput>
                <div
                  className="searchInput"
                >
                  <form
                    className="searchForm"
                  >
                    <label
                      htmlFor="search"
                    >
                      <input
                        id="search"
                        placeholder="Search..."
                        type="text"
                      />
                    </label>
                    <button
                      type="submit"
                    />
                  </form>
                </div>
              </SearchInput>
              <ProfileButton>
                <div
                  className="wrapper"
                >
                  <div
                    className="dropdown"
                  >
                    <button
                      className="dropdownButton"
                      onClick={[Function]}
                      type="button"
                    />
                  </div>
                </div>
              </ProfileButton>
            </div>
          </AccountBar>
        </header>
      </div>
    </Header>
    <main
      className="container"
    >
      <PageHeader
        label="На основании вашего выбора"
      >
        <h2
          className="pageHeader"
        >
          На основании вашего выбора
        </h2>
      </PageHeader>
      <section>
        <CourseCardsLarge
          cards={
            Array [
              Object {
                "id": 1,
                "imageSrc": "remote-assets/images/suggestions/sg-course-1.png",
                "label": "React",
              },
              Object {
                "id": 2,
                "imageSrc": "remote-assets/images/suggestions/sg-course-2.png",
                "label": "CI/CD",
              },
              Object {
                "id": 3,
                "imageSrc": "remote-assets/images/suggestions/sg-course-3.png",
                "label": "JavaScript Mastering",
              },
              Object {
                "id": 4,
                "imageSrc": "remote-assets/images/suggestions/sg-course-4.png",
                "label": "git",
              },
            ]
          }
          showNumber={false}
        >
          <ul
            className="catalogList"
          >
            <li
              className="cardContainer"
              key="React0"
            >
              <div
                className="catalogItemLong"
              >
                <SmartImage
                  path="remote-assets/images/suggestions/sg-course-1.png"
                >
                  <img
                    className="cardImage"
                    onError={[Function]}
                    src="remote-assets/images/suggestions/sg-course-1.png"
                  />
                </SmartImage>
                <Link
                  className="catalogLinkLong"
                  to="/coursepage/1"
                >
                  <a
                    className="catalogLinkLong"
                    href="/coursepage/1"
                  >
                    <h3
                      className="catalogHeaderLong"
                    >
                      <span
                        className="catalogCategoryLong"
                      >
                        React
                      </span>
                    </h3>
                  </a>
                </Link>
              </div>
            </li>
            <li
              className="cardContainer"
              key="CI/CD1"
            >
              <div
                className="catalogItemLong"
              >
                <SmartImage
                  path="remote-assets/images/suggestions/sg-course-2.png"
                >
                  <img
                    className="cardImage"
                    onError={[Function]}
                    src="remote-assets/images/suggestions/sg-course-2.png"
                  />
                </SmartImage>
                <Link
                  className="catalogLinkLong"
                  to="/coursepage/2"
                >
                  <a
                    className="catalogLinkLong"
                    href="/coursepage/2"
                  >
                    <h3
                      className="catalogHeaderLong"
                    >
                      <span
                        className="catalogCategoryLong"
                      >
                        CI/CD
                      </span>
                    </h3>
                  </a>
                </Link>
              </div>
            </li>
            <li
              className="cardContainer"
              key="JavaScript Mastering2"
            >
              <div
                className="catalogItemLong"
              >
                <SmartImage
                  path="remote-assets/images/suggestions/sg-course-3.png"
                >
                  <img
                    className="cardImage"
                    onError={[Function]}
                    src="remote-assets/images/suggestions/sg-course-3.png"
                  />
                </SmartImage>
                <Link
                  className="catalogLinkLong"
                  to="/coursepage/3"
                >
                  <a
                    className="catalogLinkLong"
                    href="/coursepage/3"
                  >
                    <h3
                      className="catalogHeaderLong"
                    >
                      <span
                        className="catalogCategoryLong"
                      >
                        JavaScript Mastering
                      </span>
                    </h3>
                  </a>
                </Link>
              </div>
            </li>
            <li
              className="cardContainer"
              key="git3"
            >
              <div
                className="catalogItemLong"
              >
                <SmartImage
                  path="remote-assets/images/suggestions/sg-course-4.png"
                >
                  <img
                    className="cardImage"
                    onError={[Function]}
                    src="remote-assets/images/suggestions/sg-course-4.png"
                  />
                </SmartImage>
                <Link
                  className="catalogLinkLong"
                  to="/coursepage/4"
                >
                  <a
                    className="catalogLinkLong"
                    href="/coursepage/4"
                  >
                    <h3
                      className="catalogHeaderLong"
                    >
                      <span
                        className="catalogCategoryLong"
                      >
                        git
                      </span>
                    </h3>
                  </a>
                </Link>
              </div>
            </li>
          </ul>
        </CourseCardsLarge>
      </section>
    </main>
  </CatalogCourses>
</Provider>
`;
